hard-gists/4707012/run.log
=== Docker Run Log for 4707012 ===
Started at: Mi 29. Okt 14:57:46 CET 2025

[2025-10-29 14:57:47] START: Running container for 4707012
[2025-10-29 14:57:47] SUCCESS: Container 54d411a39f2651d2ac6244e0007e2f8dfefd4f30dcc03df473f3aaebe62b5ef3 started for 4707012
=== Container logs for 4707012 ===
  File "/snippet.py", line 43
    print len(data)
    ^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4707012 ===
[2025-10-29 14:57:49] INFO: Container 54d411a39f2651d2ac6244e0007e2f8dfefd4f30dcc03df473f3aaebe62b5ef3 has stopped
